# Transfer

./: .gitignore  CMakeLists.txt  MakeTransfer.sh  Transfer.sln  build_notes.txt  devnotes.txt
Transfer/: ActionHelpers.cpp  ActionHelpers.h  Bodies.cpp  Bodies.h  Colors.cpp  Colors.h  Constants.h  EventListenerHelpers.cpp  EventListenerHelpers.h  GameState.h  GravityForceCalculation.cpp  GravityForceCalculation.h  PhysicsStructures.h  RenderHelpers.cpp  RenderHelpers.h  RunGame.cpp  RunGame.h  Transfer.vcxproj  Transfer.vcxproj.filters  UtilityHelpers.cpp  UtilityHelpers.h  main.cpp
Transfer/src/: main.cpp
Transfer/src/Core/: Game.cpp  Game.h  GameState.cpp  GameState.h  InputState.cpp  InputState.h  UIState.cpp  UIState.h
Transfer/src/Entities/: GravitationalBody.cpp  GravitationalBody.h  PhysicsStructures.cpp  PhysicsStructures.h  TwinklingStars.h  UIElement.cpp  UIElement.h
Transfer/src/Entities/UIElements/: FPSCounter.cpp  FPSCounter.h  MassSlider.cpp  MassSlider.h  notes.txt
Transfer/src/Systems/: AudioSystem.cpp  AudioSystem.h  InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  UISystem.cpp  UISystem.h
Transfer/src/Utilities/: Colors.h  CustomMathUtilities.h  EngineConstants.h  GameSystemConstants.h
